--- a/package.json
+++ b/package.json
@@ -9,40 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emoji-mart/data": "^1.2.1",
-    "@emoji-mart/react": "^1.1.1",
-    "@mistralai/mistralai": "^1.5.0",
-    "@next-auth/mongodb-adapter": "^1.1.3",
-    "@react-spring/three": "^9.7.5",
-    "@react-three/drei": "^10.0.3",
-    "@react-three/fiber": "^9.0.4",
     "animate.css": "^4.1.1",
     "axios": "^1.8.1",
-    "bcryptjs": "^3.0.2",
-    "dotenv": "^16.4.7",
     "emoji-picker-react": "^4.12.0",
     "firebase": "^11.4.0",
-    "framer-motion": "^12.4.7",
-    "gsap": "^3.12.7",
-    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.476.0",
-    "mongodb": "^5.9.2",
-    "mongoose": "^8.10.1",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
-    "node-fetch": "^3.3.2",
-    "pg": "^8.13.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-markdown": "^10.0.0",
-    "three": "^0.174.0"
+    "react-markdown": "^10.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "@eslint/eslintrc": "^3"
   }
 }
